# Pathfinder

./: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
Pathfinder_Vault/: Architecture.md  Build Roadmap.md  Data Pipeline.md  Database Schema.md  GIS Microservice API.md  Implementation Plan.md  Monorepo And Tooling.md  Pathfinder Lab.md  Pathfinder Overview.md  Pathfinder Studio.md  Pathfinder.md  User And Auth Model.md
Pathfinder_Vault/.obsidian/: workspace.json
services/gis/: Dockerfile  docker-compose.yml  pyproject.toml
services/gis/app/: job_store.py  main.py  models.py  watchdog.py
services/gis/tests/: test_jobs.py  test_watchdog.py
